src/css/variables/sandstone.css
$baseFontFamily:    'Open Sans', sans-serif;

$baseFontSize:      14px;
$baseLine:          20px;
$smallFontSize:     12px;
$largeFontSize:     16px;

$textColorPrimary:   #333;
$textColorSecondary: #484848;
$textColorTertiary:  #666;
$textColorLight:     #bbb;
$backgroundLightWarm: #f6f4ec;
$textColorLightWarm: #b1b1ad;

$textColorSpaceYellow: #ffbb38;
$blueprintTextColorSecondary: #a2b4c7;

$linkRed:            rgb(175,50,50);
$linkBlue:           rgb(0,150,221);
$linkBlueHover:      rgb(0,83,159);
$linkSkyBlue:        rgb(103,167,208);
$linkSpaceBlue:      rgb(47,138,202);
$linkSpacePurple:    rgb(147,111,188);

$mozillaRed: #c13832;

$buttonGreen: #81bc2e;
$buttonGreenDark: darken($buttonGreen, 10%);
$buttonTextColor: #fff;
$buttonBlue: #43a6e2;
$buttonBlueDark: #277ac1;

/* new mozID visual style */
$mozIDBlue: #0c99d5;
$mozIDGrey: #56565a;

@define-placeholder base-font {
  font-family: $baseFontFamily;
}

@define-placeholder base-font-italic {
  /*font-family: $baseFontFamily;*/
  font-style: italic;
}

@define-placeholder base-font-light {
  /*font-family: $baseFontFamily;*/
  font-weight: 300;
}

@define-placeholder base-font-extrabold {
  /*font-family: $baseFontFamily;*/
  font-weight: 800;
}

/* Button shadows */

$shadowPartBottom:      0px 1px 0px 0px rgba(0, 0, 0, 0.2);
$shadowPartBottomInset: inset 0px -1px 0px 0px rgba(0, 0, 0, 0.3);
$shadowPartHover:       inset 0px 12px 24px 2px saturate($buttonBlue, 10%);
$shadowPartFocusRing:   0 0 0 2px rgba(73,173,227,0.4);

$buttonShadow:          $shadowPartBottom, $shadowPartBottomInset;
$buttonShadowHover:     $shadowPartBottom, $shadowPartBottomInset, $shadowPartHover;
$buttonShadowFocus:     $shadowPartBottom, $shadowPartBottomInset, $shadowPartHover, $shadowPartFocusRing;

$buttonShadowActive:     inset 0px 2px 0px 0px rgba(0, 0, 0, 0.2),
                         inset 0px 12px 24px 6px rgba(0,0,0,0.2),
                         inset 0px 0px 2px 2px rgba(0,0,0,0.2);

$borderColor: #d6d6d6;

/* Gutter width remains the same for all grids */
$gridGutterWidth:         20px;

/* Default grid: 12 columns at 60px */
$gridColumns:             12;
$gridColumnWidth:         60px;
$gridRowWidth:            ($gridColumns * $gridColumnWidth) + ($gridGutterWidth * ($gridColumns - 1));

/* Tablet grid: 12 columns at 40px */
$gridColumnWidthNarrow:   40px;
$gridRowWidthTablet:      ($gridColumns * $gridColumnWidthNarrow) + ($gridGutterWidth * ($gridColumns - 1));

/* Mobile grid: 5 columns at 40px */
$gridColumnsMobile:       5;
$gridRowWidthMobile:      ($gridColumnsMobile * $gridColumnWidthNarrow) + ($gridGutterWidth * ($gridColumnsMobile - 1));

/* Mobile landscape grid: 7 columns at 40px */
$gridColumnsMobileWide:   7;
$gridRowWidthMobileWide:  ($gridColumnsMobileWide * $gridColumnWidthNarrow) + ($gridGutterWidth * ($gridColumnsMobileWide - 1));

/* Breakpoints for common devices */
$breakDesktopWide:        1400px;
$breakDesktop:            1000px;
$breakTablet:             760px;
$breakMobileLandscape:    480px;
$breakMobile:             320px;

/* Page widths for common breakpoints */

/* Desktop: */
/*           (12cols ✕ 60px) =  720 */
/* +     (11 gutters ✕ 20px) =  220 */
/* + (2 page gutters ✕ 30px) =   60 */
/* -------------------------------- */
/*                           = 1000px */

/* Tablet: */
/*           (12cols ✕ 40px) =  480 */
/* +     (11 gutters ✕ 20px) =  220 */
/* + (2 page gutters ✕ 30px) =   60 */
/* -------------------------------- */
/*                           =  760px */

/* Phone (landscape): */
/*            (7cols ✕ 40px) =  280 */
/* +      (6 gutters ✕ 20px) =  120 */
/* + (2 page gutters ✕ 20px) =   40 */
/* -------------------------------- */
/*                           =  440px */

/* Phone (portrait): */
/*            (5cols ✕ 40px) =  200 */
/* +      (4 gutters ✕ 20px) =   80 */
/* + (2 page gutters ✕ 20px) =   40 */
/* -------------------------------- */
/*                           =  320px */

$widthDesktopWide:        1400px;
$widthDesktop:            1000px;
$widthTablet:             760px;
$widthMobileLandscape:    440px;
$widthMobile:             320px;

